random-image/random-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: random-deployment
  namespace: random
spec:
  replicas: 1
  selector:
    matchLabels:
      app: random
  template:
    metadata:
      labels:
        app: random
    spec:
      serviceAccountName: s3downloader
      volumes:
        - name: images-volume
          emptyDir: {}
      containers:
      - name: random-container 
        image: rcanderson23/random-image:v1
        command:
        - /random_image
        resources:
          requests:
            memory: '256Mi'
            cpu: '250m'
          limits:
            memory: '1024Mi'
            cpu: '1000m'
        volumeMounts:
        - mountPath: /images
          name: images-volume
