random-image/random-service.yml
apiVersion: v1
kind: Service
metadata:
  name: random-service 
  namespace: random
spec:
  ports:
  - name: http
    targetPort: 8080 
    port: 80
  selector:
    app: random
